# goalkeeper

./: .gitignore  CMakeLists.txt  README.md
src/: goal.h  goalmanager.cpp  goalmanager.h  main.cpp
ui/: app-window.slint
